# tellor-pallet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.runtime-api  README.md  rustfmt.toml
.github/workflows/: check-sample.yml  check.yml  test.yml
runtime-api/: Cargo.toml
runtime-api/src/: autopay.rs  governance.rs  lib.rs  tests.rs
src/: api.rs  benchmarking.rs  constants.rs  impls.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
src/contracts/: governance.rs  mod.rs  registry.rs  staking.rs
src/tests/: autopay.rs  governance.rs  mod.rs  oracle.rs  using_tellor.rs  weights.rs
src/xcm/: ethereum_xcm.rs  mod.rs
src/xcm/ethereum_xcm/: mod.rs
src/xcm/ethereum_xcm/contracts/: governance.rs  mod.rs  staking.rs
using-tellor/: Cargo.toml  README.md
using-tellor/src/: lib.rs
