[package]
name = "tellor-runtime-api"
version = "0.1.0"
authors = ["Tellor <info@tellor.io>", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://tellor.io"
repository = "https://github.com/tellor-io/tellor-pallet"
description = "Runtime API for Tellor pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.7.0", default-features = false, features = ["derive"] }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
tellor = { default-features = false, path = ".." }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
hex = "0.4.3"
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
scale-info = { version = "2.1.1", features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-test-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.43" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std",
    "sp-std/std",
    "tellor/std",
]
